# terraform

./: .gitignore  CsTrader.md  README.md  Stack Tecnologica.md  alembic.ini  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
CLOUD-COMPUTING/: CsTrader.md  pyproject.toml
CLOUD-COMPUTING/backend/ops/: Dockerfile
CLOUD-COMPUTING/backend/src/: main.py
CLOUD-COMPUTING/frontend/: Dockerfile
CLOUD-COMPUTING/frontend/conf.d/: default.conf
CLOUD-COMPUTING/infra/: k8s.tf  makefile  xiaomi.tfvars
CLOUD-COMPUTING/infra/terraform.tfstate.d/xiaomi/: terraform.tfstate
CLOUD-COMPUTING/k8/backend/: deployment.yaml
alembic/: env.py
alembic/versions/: 5618972aaa9e_change_database_class_for_alembic.py  6f30033a80f4_create_users_table.py
backend/: alembic.ini
backend/alembic/: env.py
backend/ops/: Dockerfile
backend/src/: auth.py  database.py  db_models.py  initialize_admin.py  main.py  models.py  seed.py  settings.py
frontend/: Dockerfile
frontend/conf.d/: default.conf
frontend/html/: index.html  marketplace_teste.json
infra/: k8s.plan  terraform.tf  variables.tf
infra_k8/backend/: deployment.yaml
infra_k8/database/: db-StatefulSet.yaml  db-pvc.yaml  db-service.yaml
infra_k8/frontend/: deployment.yaml  service.yaml
infra_k8/ingress/: app-ingress.yaml
scripts/: cleanup.sh  start.sh  test.sh
terraform/: .env.app  backend-service.tf  backend.tf  database-service.tf  database.tf  frontend-service.tf  frontend.tf  ingress.tf  k8s.plan  makefile  namespace.tf  secrets.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+40 files in other folders)
